Add risk interval display stats
